--- a/sdk/pom.xml
+++ b/sdk/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>nomad-sdk</artifactId>
-    <version>0.12.0-SNAPSHOT</version>
+    <version>0.12.1</version>
     <packaging>jar</packaging>
     <parent>
         <groupId>com.hashicorp.nomad</groupId>
