--- a/sdk/pom.xml
+++ b/sdk/pom.xml
@@ -9,7 +9,7 @@
     <parent>
         <groupId>com.hashicorp.nomad</groupId>
         <artifactId>nomad-sdk-parent</artifactId>
-        <version>0.12.0-SNAPSHOT</version>
+        <version>0.11.3.0</version>
         <relativePath>..</relativePath>
     </parent>
 
